Fix write & read statement for Interpret

--- a/JJTree/vs2015/SPLCV.vcxproj
+++ b/JJTree/vs2015/SPLCV.vcxproj
@@ -57,7 +57,9 @@
     <ClCompile Include="..\VST\rts\Boolean.cpp" />
     <ClCompile Include="..\VST\rts\Integer.cpp" />
     <ClCompile Include="..\VST\rts\Object.cpp" />
+    <ClCompile Include="..\VST\rts\Readable.cpp" />
     <ClCompile Include="..\VST\rts\Variable.cpp" />
+    <ClCompile Include="..\VST\rts\Writable.cpp" />
     <ClCompile Include="..\VST\SPLC.cpp" />
     <ClCompile Include="..\VST\vst\DumpVisitor.cpp" />
     <ClCompile Include="..\VST\vst\Interpret.cpp" />
@@ -106,14 +108,18 @@
     <ClInclude Include="..\VST\jjt\ASTReadStatement.h" />
     <ClInclude Include="..\VST\jjt\ASTVarDeclaration.h" />
     <ClInclude Include="..\VST\jjt\ASTWriteStatement.h" />
+    <ClInclude Include="..\VST\jjt\Node.h" />
     <ClInclude Include="..\VST\rts\Boolean.h" />
     <ClInclude Include="..\VST\rts\Integer.h" />
     <ClInclude Include="..\VST\rts\Object.h" />
+    <ClInclude Include="..\VST\rts\Readable.h" />
     <ClInclude Include="..\VST\rts\Variable.h" />
+    <ClInclude Include="..\VST\rts\Writable.h" />
     <ClInclude Include="..\VST\vst\DumpVisitor.h" />
     <ClInclude Include="..\VST\vst\Interpret.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\VST\gen\SPL.jj" />
     <None Include="..\VST\jjt\SPL.jjt" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
