--- a/JJTree/vs2015/SPLCV.vcxproj.filters
+++ b/JJTree/vs2015/SPLCV.vcxproj.filters
@@ -142,6 +142,12 @@
     <ClCompile Include="..\VST\gen\ASTCompilationUnit.cc">
       <Filter>ast</Filter>
     </ClCompile>
+    <ClCompile Include="..\VST\rts\Readable.cpp">
+      <Filter>rts</Filter>
+    </ClCompile>
+    <ClCompile Include="..\VST\rts\Writable.cpp">
+      <Filter>rts</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\VST\gen\ASTAddNode.h">
@@ -291,10 +297,22 @@
     <ClInclude Include="..\VST\gen\ASTCompilationUnit.h">
       <Filter>ast</Filter>
     </ClInclude>
+    <ClInclude Include="..\VST\jjt\Node.h">
+      <Filter>jjt</Filter>
+    </ClInclude>
+    <ClInclude Include="..\VST\rts\Writable.h">
+      <Filter>rts</Filter>
+    </ClInclude>
+    <ClInclude Include="..\VST\rts\Readable.h">
+      <Filter>rts</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\VST\jjt\SPL.jjt">
       <Filter>jjt</Filter>
+    </None>
+    <None Include="..\VST\gen\SPL.jj">
+      <Filter>gen</Filter>
     </None>
   </ItemGroup>
 </Project>
